--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
     "styled-components": "^5.3.11"
@@ -23,8 +24,8 @@
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
+    "daisyui": "^3.5.1",
     "dotenv": "^16.3.1",
-    "dotenv-webpack": "^8.0.1",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
